Add prediction block and started saving the TF model.

--- a/notebooks/intermediate-net-in-tf-ekholabs-demo.ipynb
+++ b/notebooks/intermediate-net-in-tf-ekholabs-demo.ipynb
@@ -289,6 +289,7 @@
    ],
    "source": [
     "with tf.Session() as session:\n",
+    "    saver = tf.train.Saver()\n",
     "    session.run(initializer_op)\n",
     "    \n",
     "    print(\"Training for\", epochs, \"epochs.\")\n",
@@ -319,7 +320,9 @@
     "    test_accuracy_pct = accuracy_pct.eval({x: mnist.test.images, y: mnist.test.labels})\n",
     "\n",
     "    print(\"Test Cost:\", '{:.3f}'.format(test_cost))\n",
-    "    print(\"Test Accuracy:\", '{:.2f}'.format(test_accuracy_pct), \"%\", sep=\"\")"
+    "    print(\"Test Accuracy:\", '{:.2f}'.format(test_accuracy_pct), \"%\", sep=\"\")\n",
+    "    \n",
+    "    saver.save(session, 'mnist_intermediate')"
    ]
   },
   {
