--- a/notebooks/lenet-in-keras-ekholabs-demo.ipynb
+++ b/notebooks/lenet-in-keras-ekholabs-demo.ipynb
@@ -4,14 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Intermediate Neural Network in Keras"
+    "# LeNet-5 in Keras"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Bulding an Intermediate Neural Network to classify MNIST digits."
+    "Bulding a Deep Convolutional Neural Network to classify MNIST digits."
    ]
   },
   {
@@ -55,8 +55,8 @@
     "import keras\n",
     "from keras.datasets import mnist\n",
     "from keras.models import Sequential\n",
-    "from keras.layers import Dense\n",
-    "from keras.optimizers import SGD"
+    "from keras.layers import Dense, Dropout\n",
+    "from keras.layers import Flatten, MaxPooling2D, Conv2D"
    ]
   },
   {
@@ -89,8 +89,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "X_train = X_train.reshape(60000, 784).astype('float32')\n",
-    "X_test = X_test.reshape(10000, 784).astype('float32')"
+    "X_train = X_train.reshape(60000, 28, 28, 1).astype('float32')\n",
+    "X_test = X_test.reshape(10000, 28, 28, 1).astype('float32')"
    ]
   },
   {
@@ -129,10 +129,14 @@
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "# Dense = Fully Connected layer\n",
-    "model.add(Dense((64), activation = 'relu', input_shape = (784,)))\n",
-    "model.add(Dense((64), activation = 'relu'))\n",
-    "model.add(Dense((10), activation = 'softmax'))"
+    "model.add(Conv2D(32, kernel_size = (3, 3), activation = 'relu', input_shape = (28, 28, 1)))\n",
+    "model.add(Conv2D(64, kernel_size = (3, 3), activation = 'relu'))\n",
+    "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
+    "model.add(Dropout(0.25))\n",
+    "model.add(Flatten())\n",
+    "model.add(Dense(128, activation = 'relu'))\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(n_classes, activation = 'softmax'))"
    ]
   },
   {
@@ -147,14 +151,24 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "dense_1 (Dense)              (None, 64)                50240     \n",
+      "conv2d_1 (Conv2D)            (None, 26, 26, 32)        320       \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 64)                4160      \n",
+      "conv2d_2 (Conv2D)            (None, 24, 24, 64)        18496     \n",
       "_________________________________________________________________\n",
-      "dense_3 (Dense)              (None, 10)                650       \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 12, 12, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 12, 12, 64)        0         \n",
+      "_________________________________________________________________\n",
+      "flatten_1 (Flatten)          (None, 9216)              0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 128)               1179776   \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 128)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 10)                1290      \n",
       "=================================================================\n",
-      "Total params: 55,050\n",
-      "Trainable params: 55,050\n",
+      "Total params: 1,199,882\n",
+      "Trainable params: 1,199,882\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -177,7 +191,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.compile(loss = 'categorical_crossentropy', optimizer = SGD(lr = 0.1), metrics = ['accuracy'])"
+    "model.compile(loss = 'categorical_crossentropy', optimizer = 'adam', metrics = ['accuracy'])"
    ]
   },
   {
@@ -197,52 +211,14 @@
      "output_type": "stream",
      "text": [
       "Train on 60000 samples, validate on 10000 samples\n",
-      "Epoch 1/20\n",
-      "60000/60000 [==============================] - 2s - loss: 0.4792 - acc: 0.8638 - val_loss: 0.2495 - val_acc: 0.9261\n",
-      "Epoch 2/20\n",
-      "60000/60000 [==============================] - 2s - loss: 0.2257 - acc: 0.9348 - val_loss: 0.1972 - val_acc: 0.9415\n",
-      "Epoch 3/20\n",
-      "60000/60000 [==============================] - 2s - loss: 0.1731 - acc: 0.9496 - val_loss: 0.1509 - val_acc: 0.9551\n",
-      "Epoch 4/20\n",
-      "60000/60000 [==============================] - 2s - loss: 0.1427 - acc: 0.9581 - val_loss: 0.1323 - val_acc: 0.9604\n",
-      "Epoch 5/20\n",
-      "60000/60000 [==============================] - 2s - loss: 0.1217 - acc: 0.9646 - val_loss: 0.1306 - val_acc: 0.9605\n",
-      "Epoch 6/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.1060 - acc: 0.9690 - val_loss: 0.1079 - val_acc: 0.9666\n",
-      "Epoch 7/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0941 - acc: 0.9720 - val_loss: 0.1008 - val_acc: 0.9694\n",
-      "Epoch 8/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0839 - acc: 0.9755 - val_loss: 0.0937 - val_acc: 0.9713\n",
-      "Epoch 9/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0771 - acc: 0.9771 - val_loss: 0.0915 - val_acc: 0.9722\n",
-      "Epoch 10/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0696 - acc: 0.9794 - val_loss: 0.0955 - val_acc: 0.9713\n",
-      "Epoch 11/20\n",
-      "60000/60000 [==============================] - 2s - loss: 0.0644 - acc: 0.9809 - val_loss: 0.0879 - val_acc: 0.9746\n",
-      "Epoch 12/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0586 - acc: 0.9827 - val_loss: 0.0839 - val_acc: 0.9751\n",
-      "Epoch 13/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0534 - acc: 0.9843 - val_loss: 0.0892 - val_acc: 0.9723\n",
-      "Epoch 14/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0498 - acc: 0.9855 - val_loss: 0.0832 - val_acc: 0.9746\n",
-      "Epoch 15/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0464 - acc: 0.9867 - val_loss: 0.0843 - val_acc: 0.9742\n",
-      "Epoch 16/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0430 - acc: 0.9876 - val_loss: 0.0883 - val_acc: 0.9731\n",
-      "Epoch 17/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0407 - acc: 0.9880 - val_loss: 0.0852 - val_acc: 0.9742\n",
-      "Epoch 18/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0370 - acc: 0.9894 - val_loss: 0.0769 - val_acc: 0.9770\n",
-      "Epoch 19/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0343 - acc: 0.9901 - val_loss: 0.0818 - val_acc: 0.9750\n",
-      "Epoch 20/20\n",
-      "60000/60000 [==============================] - 1s - loss: 0.0318 - acc: 0.9910 - val_loss: 0.0800 - val_acc: 0.9774\n"
+      "Epoch 1/1\n",
+      "60000/60000 [==============================] - 146s - loss: 0.2409 - acc: 0.9277 - val_loss: 0.0522 - val_acc: 0.9834\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7fb24ba7fd30>"
+       "<keras.callbacks.History at 0x7fd2757720f0>"
       ]
      },
      "execution_count": 10,
@@ -251,19 +227,19 @@
     }
    ],
    "source": [
-    "model.fit(X_train, y_train, batch_size = 128, epochs = 20, verbose = 1, validation_data = (X_test, y_test))"
+    "model.fit(X_train, y_train, batch_size = 128, epochs = 1, verbose = 1, validation_data = (X_test, y_test))"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Test Prediction "
+    "#### Test Prediction"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -271,14 +247,14 @@
      "output_type": "stream",
      "text": [
       "1/1 [==============================] - 0s\n",
-      "The algorithm predicts: y = 3\n"
+      "The algorithm predicts: y = 8\n"
      ]
     },
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAEthJREFUeJzt3X+Q1PV5B/D3cz8RDuS841fhkJ8KaBTTG6JFM5AUBccU\nSQdGxlraGrAZoNomaRySjnSm7WDHGJkkw/RUJmgUdapEkqExSk2pKTUciqKcGsUTELw7fgQ5Qbi7\nffrHLemJ930+535397t7z/s149zdPvvd/ezi+3b3nu/n8xFVBRH5U5L0AIgoGQw/kVMMP5FTDD+R\nUww/kVMMP5FTDD+RUww/kVMMP5FTZfm8s9oLSnVcXXk+77IgKOyzKAUS6/ZTxu2Hbjnufcd5bJ1I\nmceWBV6bQvdtVUtiPu5C1by/A4ePdvXpwcUKv4jMBbAWQCmAB1R1jXX9cXXl+M0zdXHusih1aJdZ\nL5fSWLd/WjsiayWBAMW97y61A1wq0fd/rOukeWx16UCzHnpeU8Yvl0rpny9CM67b3+frZvy2X0RK\nAfwIwDwA0wAsFpFpmd4eEeVXnM/8MwC8rap7VfUMgMcAzM/OsIgo1+KEfzSAnu8xDqQv+wQRWSYi\njSLS2HbEfptGRPkTJ/y9/VHhU39jUdUGVa1X1fphNfE+XxJR9sQJ/wEAPf96NwbAwXjDIaJ8iRP+\nHQAmi8h4EakAcBOAzdkZFhHlWsatPlXtFJEVAJ5Bd6tvvaq+nrWR9SOhdprVqgOAMtjHW22rk6kz\n5rGhsR3u+sis15YOMuuWUCsvNPaBJRWBe4h+bK2Bx1VdMsCsx22RFoJYfX5V3QJgS5bGQkR5xNN7\niZxi+ImcYviJnGL4iZxi+ImcYviJnMrrfH7qXWhqamVJ5tNPw71wW6iPHzpHocvYESo0tlD9eOqU\nWT+/5LzIWtw+fuhxF8OUYb7yEznF8BM5xfATOcXwEznF8BM5xfATOcVWXwEIrbAbp60UmhYbEmp5\nhcZeWZL51NfQysBWKw+wH3su24jFgq/8RE4x/EROMfxETjH8RE4x/EROMfxETjH8RE6xz58H8Zeg\ntj3ZPiSytuXoZeax2/ZOMuujao6b9c/X2rvCTh+0L7L2hQHN5rFTK+ylvUM6kPn2cKE+fi6XNM8X\nvvITOcXwEznF8BM5xfATOcXwEznF8BM5xfATORWrzy8izQBOAOgC0Kmq9dkYVH8Td+743x/8kll/\n6x8uiaxVPPuyeewEfcWsw1h6GwCaRMz6nivnRdb+6at2H//aWfbY1/7Br816lVRG1uL26Yuhjx+S\njZN8Zqvq4SzcDhHlEd/2EzkVN/wK4JcislNElmVjQESUH3Hf9s9U1YMiMhzAsyLyhqpu63mF9C+F\nZQAwdjSnEhAViliv/Kp6MP21FcAmADN6uU6Dqtarav2wmswXcySi7Mo4/CIySEQGn/0ewLUAXsvW\nwIgot+K8Dx8BYJN0t3rKADyqqr/IyqiIKOcyDr+q7gVweRbH4tbhLnve+f4lY8x6xZvR/XC5Yop5\n7PtfOt+snxppr51f+5JZxtAnoq8wcbu9zsF7F9aZ9dn/ttCsv3DZU5G1UJ/+WNdJs15dGm+tgULA\nVh+RUww/kVMMP5FTDD+RUww/kVMMP5FTPN82D0JbTV/36xVmfWLTLrOuM6dH1uY1/Mo89s+GvG7W\nQy2xbQvMMpZcEz3lY+o9beaxne80m3Vp+NQJpZ/0w+hSaBp1f2jlhfCVn8gphp/IKYafyCmGn8gp\nhp/IKYafyCmGn8gp9vnzoFTs37F1G+x/hpKBds/5vdnR9eVD3zGPLZd4S1BfVWlPR373Txoia5OP\nf908dtJdh8z64KajZt0S2oKbU3qJqN9i+ImcYviJnGL4iZxi+ImcYviJnGL4iZxinz8P2lMfm/UB\nH9jbRWtgae9TE6KXwC4Xe5ek0FoDIaHbP60dkbXS8e3msVJln4Og+w6a9ZOpzJ+X/tDHD+ErP5FT\nDD+RUww/kVMMP5FTDD+RUww/kVMMP5FTwT6/iKwHcAOAVlW9NH3ZBQAeBzAOQDOARap6LHfDLG5V\nJQPM+t6FQ836uO+eNuu1L5RH1g7Psc8hCK3L36GBcwwC5zCcJxXRtW2DzWO7jtjz9cvG2luXDyyJ\nvu+4Quv+h9YLKAR9eeX/MYC551x2J4CtqjoZwNb0z0RURILhV9VtAM79FTwfwIb09xsA3JjlcRFR\njmX6mX+Eqh4CgPTX4dkbEhHlQ87/4Cciy0SkUUQa247Ynx+JKH8yDX+LiIwCgPTX1qgrqmqDqtar\nav2wGnsyBRHlT6bh3wxgSfr7JQCezs5wiChfguEXkY0AtgO4WEQOiMitANYAmCMivwUwJ/0zERWR\nYJ9fVRdHlL6c5bG49YObHjDr9/zHzWa95uGdkbUrp37TPHb9n64z618cYH9UO6nRc+YBYPJzX4us\nTf35AfPYTlWz/sFcu89vCa1jcCrwuIqhjx/CM/yInGL4iZxi+ImcYviJnGL4iZxi+Imc4tLdBWD2\nefa02MZ12836z9bMjqxN/JZ97N+9ZW+T/blbXzPrOzZ9zqxPfTy6ndfZvM88tmzkCLO+9PbNZt1q\n54W2Ta8Sexq2lym9RNQPMfxETjH8RE4x/EROMfxETjH8RE4x/EROsc9fAKxtrAFgVe2bZn3+v+yK\nrH1l7nLz2IuX23381q01Zr2u5RWz3vmRsXR4iT1duO3BIWb9z4e8a9ZTiL79zsBzXinRy6EDxdHH\nD+ErP5FTDD+RUww/kVMMP5FTDD+RUww/kVMMP5FT7PMXgQnP/ZVZr3m+MrI29bn95rGdJ06Y9VR7\nu1lHYF784duuiqxds2yHeezdIx8165XG9t+Avb14qI8fwvn8RFS0GH4ipxh+IqcYfiKnGH4ipxh+\nIqcYfiKngn1+EVkP4AYArap6afqy1QCWAmhLX22Vqm7J1SCL3dWvftWsD/kbMetTjtm9ej15MrLW\nsvgy89iL/tKYbw9g+55JZn3Kyt1m3bKy9ldmvVKqMr5tACiX6Pn87Sl7r4SqEnvd/mLo44f05ZX/\nxwDm9nL591V1evo/Bp+oyATDr6rbABzNw1iIKI/ifOZfISKvish6EanO2oiIKC8yDf86ABMBTAdw\nCMD3oq4oIstEpFFEGtuORJ9rTUT5lVH4VbVFVbtUNQXgfgAzjOs2qGq9qtYPq7EXbCSi/Mko/CIy\nqsePCwDYS8ASUcHpS6tvI4BZAGpF5ACAuwDMEpHpABRAM4DbcjhGIsqBYPhVdXEvFz+YyZ0p1Jxj\nbfVl4wqtjV8SeBNkje27rfYe9ecvPWPWOw+8b9ZLhw4167/795GRtcbL15nHBuelj7f72RPb/9qs\nX/Sd6HX9v3XzAvPYjRPtDnKcOfmhPn5Il6bMemlgnYNCUPgjJKKcYPiJnGL4iZxi+ImcYviJnGL4\niZzK69LdAjFbZlYbEABSiG6vlBnbMQO5Xaq55bS9lTQ6Am3G8+x2WtuCKWZ9h9HOy/US05sW3GfW\n//Zn0VuEd3270zz24GOnzfqYsszbs6FWXQqa8W0XC77yEznF8BM5xfATOcXwEznF8BM5xfATOcXw\nEzlVUFt0h3qnHXbrNaeqJHob7DnV9lomG8quNuvaYfe7K07YPWmrZx3q4x/otLfgHlNmL599WYU9\nNfbYxdHbaA9bt9M8dt6LXzfrb1z9sH3fXdFLmleXDjSPDXXxQ1PE455Xkg985SdyiuEncorhJ3KK\n4SdyiuEncorhJ3KK4SdyKq99/rhLd8eZQ53LpbsXVR03j737+rFmvfaBD8z64E12P3zSH0dvm/Du\nV+43jx0V6HfHWWMBAH43Lbo+YqB93+Putm8b9ukTwV6+JfT/S2j9iGLAV34ipxh+IqcYfiKnGH4i\npxh+IqcYfiKnGH4ip4J9fhGpA/AQgJEAUgAaVHWtiFwA4HEA4wA0A1ikqsdCt1cCyXiw1rz10JbI\nSc6v/tGdPzTr//i/N5t12XfIrF+8Inob7Ckt9pz4R25Za9b/sDJ6Pn43u99926z/jKxtG3mJeWzq\njWaz/oNjF5r1ldXvmXVLl9qLR1SWFP/rZl8eQSeAb6jqVABXAlguItMA3Algq6pOBrA1/TMRFYlg\n+FX1kKq+lP7+BIAmAKMBzAewIX21DQBuzNUgiSj7PtN7FxEZB+AKAC8CGKGqh4DuXxAAhmd7cESU\nO30Ov4hUAXgSwB2q+uFnOG6ZiDSKSOPhI4FztYkob/oUfhEpR3fwH1HVp9IXt4jIqHR9FIDW3o5V\n1QZVrVfV+tqa4v8jCVF/EUyjiAiABwE0qeq9PUqbASxJf78EwNPZHx4R5UpfpvTOBHALgN0isit9\n2SoAawA8ISK3AtgHYGHohgQSbMlZOhE9vbQ0x6csWG1Ga1wAcGmFXb9+43az/osbppt1/TB6+e3x\na6LbgABwx66VZr3ja0fM+sqJz5v19XuuiqxNrLS3D0999JFZf/PkSLN+/Pw3ImuhJc0HltgtztBU\n52LYwjsYflV9AYhszn85u8Mhonzhh3Aipxh+IqcYfiKnGH4ipxh+IqcYfiKnRANTF7Op/vIB+ptn\n6vJ2fz0dT9k95VDfN0mL9tod1Q9vj+5368vRvW4AQMruV4eU1tbYV+iKPj8ideKEeWhJ1SCzvvrl\n58z6jMroadz9oU/fmxnX7UfjKx/3ad48X/mJnGL4iZxi+ImcYviJnGL4iZxi+ImcYviJnMrrFt0h\nuey9ludwS+W44w4d/8SErWb9vofGRdZ+ct8889jhm98x610tvS7Q9P/1I0fNuqV02kVmvembVWZ9\nRuV/mXXreY2zhDxgr+8AhJeSLwSFP0IiygmGn8gphp/IKYafyCmGn8gphp/IKYafyKmC6vPncg51\naB32OOKOO9RzPq0dZv2O6ubI2pzv3BtZA4CF1y0162X/M8msh5waEb1exBeuaTKPfX3sw4Fbz92/\naUgx9PFDiv8REFFGGH4ipxh+IqcYfiKnGH4ipxh+IqcYfiKngn1+EakD8BCAkQBSABpUda2IrAaw\nFEBb+qqrVHVLrgZazOLuGZAK7K1wMnUmsnZJhX3be/7oJ2b99FX2OQaVEr02flwdap8/YT1uwD7/\nIm6fPnTfuTyvJFv6cpJPJ4BvqOpLIjIYwE4ReTZd+76q3pO74RFRrgTDr6qHABxKf39CRJoAjM71\nwIgotz7Tex8RGQfgCgAvpi9aISKvish6EamOOGaZiDSKSGPbkXhbQxFR9vQ5/CJSBeBJAHeo6ocA\n1gGYCGA6ut8ZfK+341S1QVXrVbV+WE1x7n9G1B/1KfwiUo7u4D+iqk8BgKq2qGqXqqYA3A9gRu6G\nSUTZFgy/iAiABwE0qeq9PS4f1eNqCwC8lv3hEVGu9OWv/TMB3AJgt4jsSl+2CsBiEZkOQAE0A7gt\nJyPsB+Ju/x1n6e+4S0yXBF4fcrmEdWiqc5x2WtxxF0MrL6Qvf+1/Aej1X4E9faIixjP8iJxi+Imc\nYviJnGL4iZxi+ImcYviJnCqopbu9Ck0PrRT7nymX/e6QUD+8PfVxZK2qZECs2w4JbX1u6Qwsl94V\nmGZdDOcB8JWfyCmGn8gphp/IKYafyCmGn8gphp/IKYafyCnRQL8yq3cm0gbgvR4X1QI4nLcBfDaF\nOrZCHRfAsWUqm2O7UFWH9eWKeQ3/p+5cpFFV6xMbgKFQx1ao4wI4tkwlNTa+7SdyiuEncirp8Dck\nfP+WQh1boY4L4NgylcjYEv3MT0TJSfqVn4gSkkj4RWSuiLwpIm+LyJ1JjCGKiDSLyG4R2SUijQmP\nZb2ItIrIaz0uu0BEnhWR36a/9rpNWkJjWy0i76efu10icn1CY6sTkedFpElEXheR29OXJ/rcGeNK\n5HnL+9t+ESkF8BaAOQAOANgBYLGq7snrQCKISDOAelVNvCcsIl8E0A7gIVW9NH3ZvwI4qqpr0r84\nq1X12wUyttUA2pPeuTm9ocyonjtLA7gRwF8gwefOGNciJPC8JfHKPwPA26q6V1XPAHgMwPwExlHw\nVHUbgKPnXDwfwIb09xvQ/T9P3kWMrSCo6iFVfSn9/QkAZ3eWTvS5M8aViCTCPxrA/h4/H0Bhbfmt\nAH4pIjtFZFnSg+nFiPS26We3Tx+e8HjOFdy5OZ/O2Vm6YJ67THa8zrYkwt/b7j+F1HKYqaqfBzAP\nwPL021vqmz7t3JwvvewsXRAy3fE625II/wEAdT1+HgPgYALj6JWqHkx/bQWwCYW3+3DL2U1S019b\nEx7P7xXSzs297SyNAnjuCmnH6yTCvwPAZBEZLyIVAG4CsDmBcXyKiAxK/yEGIjIIwLUovN2HNwNY\nkv5+CYCnExzLJxTKzs1RO0sj4eeu0Ha8TuQkn3Qr4z4ApQDWq+o/530QvRCRCeh+tQe6VzZ+NMmx\nichGALPQPeurBcBdAH4K4AkAYwHsA7BQVfP+h7eIsc1C91vX3+/cfPYzdp7HdjWA/wawG8DZ5YlX\nofvzdWLPnTGuxUjgeeMZfkRO8Qw/IqcYfiKnGH4ipxh+IqcYfiKnGH4ipxh+IqcYfiKn/g9Kk3+w\niO2ulgAAAABJRU5ErkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x7fb20dee9240>"
+       "<matplotlib.figure.Figure at 0x7fd21f5109b0>"
       ]
      },
      "metadata": {},
@@ -298,7 +274,8 @@
     "# Preprocess image to fit the algorithm.\n",
     "fname = \"images/\" + test_image\n",
     "image = np.array(ndimage.imread(fname, flatten = False))\n",
-    "test_image = image.reshape((1, 28 * 28 * 1))\n",
+    "\n",
+    "test_image = scipy.misc.imresize(image, size = (28, 28)).reshape((1, 28, 28, 1))\n",
     "image_prediction = model.predict_classes(test_image)\n",
     "\n",
     "plt.imshow(image)\n",
