Updated notebooks and add intermediate net in keras.

--- a/notebooks/lenet5-in-tf-ekholabs-demo.ipynb
+++ b/notebooks/lenet5-in-tf-ekholabs-demo.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,9 +50,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Extracting MNIST_data/train-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/train-labels-idx1-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-images-idx3-ubyte.gz\n",
+      "Extracting MNIST_data/t10k-labels-idx1-ubyte.gz\n"
+     ]
+    }
+   ],
    "source": [
     "from tensorflow.examples.tutorials.mnist import input_data\n",
     "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot = True)"
@@ -60,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -79,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +143,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -178,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -212,7 +223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -278,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,7 +324,36 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training for 10 epochs.\n",
+      "Step 1 of 429 in epoch 1.\n",
+      "Step 41 of 429 in epoch 1.\n",
+      "Step 81 of 429 in epoch 1.\n",
+      "Step 121 of 429 in epoch 1.\n",
+      "Step 161 of 429 in epoch 1.\n",
+      "Step 201 of 429 in epoch 1.\n",
+      "Step 241 of 429 in epoch 1.\n",
+      "Step 281 of 429 in epoch 1.\n",
+      "Step 321 of 429 in epoch 1.\n",
+      "Step 361 of 429 in epoch 1.\n",
+      "Step 401 of 429 in epoch 1.\n",
+      "Epoch 001: cost = 0.257, accuracy = 92.17%\n",
+      "Step 1 of 429 in epoch 2.\n",
+      "Step 41 of 429 in epoch 2.\n",
+      "Step 81 of 429 in epoch 2.\n",
+      "Step 121 of 429 in epoch 2.\n",
+      "Step 161 of 429 in epoch 2.\n",
+      "Step 201 of 429 in epoch 2.\n",
+      "Step 241 of 429 in epoch 2.\n",
+      "Step 281 of 429 in epoch 2.\n",
+      "Step 321 of 429 in epoch 2.\n"
+     ]
+    }
+   ],
    "source": [
     "with tf.Session() as session:\n",
     "    session.run(initializer_op)\n",
