Add predictions and final accuracty to notebooks.

--- a/notebooks/lenet-in-keras-ekholabs-demo.ipynb
+++ b/notebooks/lenet-in-keras-ekholabs-demo.ipynb
@@ -56,7 +56,13 @@
     "from keras.datasets import mnist\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Dense, Dropout\n",
-    "from keras.layers import Flatten, MaxPooling2D, Conv2D"
+    "from keras.layers import Flatten, MaxPooling2D, Conv2D, Activation\n",
+    "from keras.callbacks import TensorBoard\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -130,12 +136,14 @@
    "source": [
     "model = Sequential()\n",
     "model.add(Conv2D(32, kernel_size = (3, 3), activation = 'relu', input_shape = (28, 28, 1)))\n",
-    "model.add(Conv2D(64, kernel_size = (3, 3), activation = 'relu'))\n",
+    "model.add(Conv2D(64, kernel_size = (3, 3), activation = 'relu',))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.25))\n",
+    "\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(128, activation = 'relu'))\n",
-    "model.add(Dropout(0.5))\n",
+    "model.add(Dense(128, activation = 'relu',))\n",
+    "model.add(Dropout(0.25))\n",
+    "\n",
     "model.add(Dense(n_classes, activation = 'softmax'))"
    ]
   },
@@ -198,36 +206,52 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### Train!"
+    "#### TensorBoard"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "tensorboard = TensorBoard(\"logs/lenet5-cnn-mnist-20-epochs\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Train!"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 60000 samples, validate on 10000 samples\n",
+      "Train on 54000 samples, validate on 6000 samples\n",
       "Epoch 1/1\n",
-      "60000/60000 [==============================] - 133s - loss: 0.2395 - acc: 0.9271 - val_loss: 0.0525 - val_acc: 0.9828\n"
+      "54000/54000 [==============================] - 447s - loss: 0.2061 - acc: 0.9369 - val_loss: 0.0531 - val_acc: 0.9853\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<keras.callbacks.History at 0x7f24e11536d8>"
+       "<keras.callbacks.History at 0x7f8f740bafd0>"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "model.fit(X_train, y_train, batch_size = 128, epochs = 1, verbose = 1, validation_data = (X_test, y_test))"
+    "model.fit(X_train, y_train, batch_size = 128, epochs = 1, verbose = 1, validation_split = 0.1, callbacks = [tensorboard])"
    ]
   },
   {
@@ -239,55 +263,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s\n",
-      "The algorithm predicts: y = 0\n"
+      "[7 2 1 ..., 4 5 6]\n"
      ]
-    },
-    {
-     "data": {
-      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAP8AAAD8CAYAAAC4nHJkAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAE11JREFUeJzt3X+Q1PV5B/D3s3v8xhB+KgOnEEEDtZHoDbH+yNhaDWbS\nYJqEyGRSdKg4RFN1nIyWSUdmOunQTvz1R5IWIxEmCcapWmnrSKxjYm2N4SCoJGhU5hByhONXEuAE\nud2nf9ySnnrf5zn2s7vfvXverxmGu332u/fZvX3f7t3z/Xw+oqogongKeQ+AiPLB8BMFxfATBcXw\nEwXF8BMFxfATBcXwEwXF8BMFxfATBdXSyC82aUJRZ7QOy6wrqj/bUCBmPeW2vdsvO7dtj8wfu8e6\nb6mPi/eoFRLHbn9t73G1v7b1fUkdt/c9r+fjYunYdQL7D5YG9MWTwi8iCwDcD6AI4Duqusq6/ozW\nYfjZxtbM+gktVT2WYVI06ym37d3+cT1hHltw3mB5Y/dY98277ZKWzXoP7MdthGT/ME/lja0o9uNq\nfV9Sx91dfsesjy4MT7r9as3/xK4BX7fqt/0iUgTwTQBXA5gLYLGIzK329oiosVJ+558P4A1V3aGq\n7wB4GMDC2gyLiOotJfzTAPR9j7G7ctm7iMgyEWkXkfZ9B9LeehNR7aSEv78/KrzvryCqulpV21S1\nbfLEtN9tiah2UsK/G0Dfv95NB9CZNhwiapSU8G8CMFtEZorIcADXAthQm2ERUb1V3epT1R4RuRnA\nRvS2+tao6i9SBpPSlvJaeV47rp4tq9RWXsrYD5W6zWPHF0eb9aLz+uA97tZ9P1I+Zh47tjDSrHus\nxyX1+ZBXK6+Wkvr8qvokgCdrNBYiaiCe3ksUFMNPFBTDTxQUw08UFMNPFBTDTxRUQ+fzK9TsC3tz\noM0pnM70z9SescXrCaf22j37S0cza3tL9s/3ztLbZv2o2k+RGS321NZjxo5QZ7aMNY/1pJwn4E2z\nTp1OPBgM/ntARFVh+ImCYviJgmL4iYJi+ImCYviJgmpoqw+o35LG3iqz3tRUb4pndzm7/gGnjei1\n8ryVYK9989NmvXPdzMzalJ/8xjy29GaHWS9OmmTW9/7lLLP+xa9szKzdNP4189hj2mPWxxVGmXWL\nNxXZm7KbMpW5WfCVnygohp8oKIafKCiGnygohp8oKIafKCiGnyiohvb5BWJOhfR6p1bn1DvWm3br\nTfFMmXb7nD3zFNc/8TdmfdZtPzXrE2VvZk1H2b3wlrOyd00GgPK+A2Z90r+8YNafXjsls/bQwx8z\nj315/nqz/ruyPR3ZOg/A6+On3PZgwVd+oqAYfqKgGH6ioBh+oqAYfqKgGH6ioBh+oqCS+vwi0gHg\nMIASgB5VbUu5PW9OvTVHOnVp7pT51z9+2/4ZesO/3mjWZ91h98pbpp5h1o9ekN2rf+tqe2xzz3vL\nrL/65hyzPmudfX6F/M8rmbVpK+21Hf5h3blm/Y6J2826xTsvZCj08T21OMnnT1V1fw1uh4gaiG/7\niYJKDb8C+JGIbBaRZbUYEBE1Rurb/ktUtVNEpgB4WkReVdXn+l6h8kNhGQCcOa3hSwYSUYakV35V\n7az83wXgcQDz+7nOalVtU9W2yRObf1FDoiiqDr+IjBGR005+DOAqANtqNTAiqq+U9+GnA3hcRE7e\nzg9U9amajIqI6q7q8KvqDgDn13As7pz7evLOMejsOZ5ZW75luXns2V/bbNbltNPM+o4bPmTW//eG\nb2TWvHUI3PXnz7F/VXvwYvschPXLP5lZK/54i3nsd7Zcatav/zP7cZ1qbAGeuq6+93zJ87k8UGz1\nEQXF8BMFxfATBcXwEwXF8BMFxfATBdVU59umbN/ttaw8XmumjOxW34mdY8xjCx8cZ9Z3fMXe5vql\npfeb9RFS/bLiZZSda9gtsaXj7C3A77k4e6p16wsjzGPHbLPrv73cfu2aatRK6t1v22Bo5Xn4yk8U\nFMNPFBTDTxQUw08UFMNPFBTDTxQUw08UVFP1+a3tuz2pUzQ9EwrZY3vsc/eZx95y/hfM+t0zv2vW\nW5xeewpva/LUfnj3mT2ZNT2efe4EAIw8qGa9s2RPhT7HmHbrPde8++3VU57LjdL8IySiumD4iYJi\n+ImCYviJgmL4iYJi+ImCYviJgmqqPn+KevddrSWwC/K2eeyzf/SEWU8de8paBvU+P2L0TuMpJvb6\nDccm2vUx8o5ZL9bxvg2GPr5n8N8DIqoKw08UFMNPFBTDTxQUw08UFMNPFBTDTxSU2+cXkTUAPgWg\nS1XPq1w2AcAPAcwA0AFgkaoe8m5LoWZPu569U3cr6oSe8LjCqKqPBdLvt7X2vre+vLfVtPe4beye\nYtanbDF68c79Pn7hEbM+Z7jd5weq/770wL7fxSHwujmQe/AQgAXvuexOAM+o6mwAz1Q+J6JBxA2/\nqj4H4OB7Ll4IYG3l47UArqnxuIiozqp973K6qu4BgMr/9ns/Imo6df/FRUSWiUi7iLTvP5C2HhwR\n1U614d8rIlMBoPJ/V9YVVXW1qrapatukiYP/jyREQ0W1adwAYEnl4yUA7GlrRNR03PCLyHoALwA4\nV0R2i8hSAKsAXCkirwO4svI5EQ0ibp9fVRdnlK441S+msPunKb1Tt1eeuP58Cq+X7q2d752D4B1v\n6S7bY7PWMQCAOzZ91qyfs2VndvHss8xjb/nIs2Y95fwK73vi7ZXAdfuJaNBi+ImCYviJgmL4iYJi\n+ImCYviJgmro0t2C+m43bUltvVitnTLsraRTp9XCecysVmBX6ah57JTiGLPuHT/+v0aa9dK+fZm1\n3X892zx2wZjtZv1I2X76jpLhmTXveeg9X7rL9nTi0cbXbhZ85ScKiuEnCorhJwqK4ScKiuEnCorh\nJwqK4ScKqsF9fknqt3vTKC2pfX7reO/MhZQttAH/PADrPAKvj3+o1G3WP/Yft5n1c7+32awXz2rN\nrF3x2U3msVOLdq+83tuLD3V85ScKiuEnCorhJwqK4ScKiuEnCorhJwqK4ScKqqF9/qj8frRd9+aO\nQ05tPH39+dbrzPrcVXvMes8Je2yvL5+eWfvu6Q+bx44u2OcoeFLWYPC+Y0PhHAO+8hMFxfATBcXw\nEwXF8BMFxfATBcXwEwXF8BMF5fb5RWQNgE8B6FLV8yqXrQRwA4CTi7KvUNUnvdtSaK5z8i31HJd3\n28e1x6yPLtjz2o+Uj2XWvrzrKvPYSX8/wqz37PyVWe+6+WKz/sgX7s2sDUs5QQH+42ptB+/tpRDB\nQNL0EIAF/Vx+r6rOq/xzg09EzcUNv6o+B+BgA8ZCRA2U8j76ZhF5WUTWiMj4mo2IiBqi2vB/G8DZ\nAOYB2APg7qwrisgyEWkXkfb9B6r/vZqIaquq8KvqXlUtqWoZwAMA5hvXXa2qbaraNmkimwtEzaKq\nNIrI1D6ffgbAttoMh4gaZSCtvvUALgcwSUR2A7gLwOUiMg+AAugAcGMdx0hEdeCGX1UX93Pxg9V8\nMW/dfnd9e6Ovm3oOgDe/21o7f6zYe9R7t+318b1+9orfXJZZ61wxyzy25ef2m7bDiy4y60uW213e\nOcOzvy8jxD7HIFWLOys/Nv4SThQUw08UFMNPFBTDTxQUw08UFMNPFFRDl+72pvQWnCmeVjsvZRtr\nwF+KOWWpZu9Yb5vsG3f+hVk/cNeMzFrLs/YW2nrRR8z6zFtfNeu3ju8w60D24+61ML32bT23e6/n\n9PFmMfTvIRH1i+EnCorhJwqK4ScKiuEnCorhJwqK4ScKqqF9fm9Kr7cV9Wixp76msJa/BuxevXcO\nwe/Kb5v1C/7zVrP+4a9uN+sth41evtPHn/PNX5r1fzzjBbNeUvscBvvcDHvJ8hHO09PrxbtTxK3b\ndurcopuIBi2Gnygohp8oKIafKCiGnygohp8oKIafKKiG9vk9J4wtlT2pWy4XnJ+D1u0/1W0vQf23\n933ZrJ/7gDPnvmwv/d1zxYWZtRlff808dsWUn5j1ETLGrKdsbe4tWZ4qpRcfYb7/4L8HRFQVhp8o\nKIafKCiGnygohp8oKIafKCiGnygot88vIq0A1gE4A0AZwGpVvV9EJgD4IYAZADoALFLVQymDGZuw\nZbM3d9vr+Xo9Z+v2b3/pc+ax07/1olnXsj32Q9f9iVlfu/LuzFpri/3zfWzB7uOnsvZTSD03w1sn\nwVr/wXs+eNuqD/7Z/AN75e8BcLuqzgFwEYCbRGQugDsBPKOqswE8U/mciAYJN/yqukdVt1Q+Pgxg\nO4BpABYCWFu52loA19RrkERUe6f0O7+IzADwUQAvAjhdVfcAvT8gAEyp9eCIqH4GHH4RGQvgUQC3\nqurvT+G4ZSLSLiLt+w5Uf+4+EdXWgMIvIsPQG/zvq+pjlYv3isjUSn0qgK7+jlXV1arapqptkycO\nhT+TEA0NbvhFRAA8CGC7qt7Tp7QBwJLKx0sAPFH74RFRvQxkSu8lAL4E4BUR2Vq5bAWAVQAeEZGl\nAN4C8PnUwaQsxey1brwpml5rx2pZFYvOtFanlYeCPfbxD9nLZy/fd0tmrXjbXvPYJ+c8atZL6rS8\nxN5W3WrnuUu1O+3XcYVRZj1lunEEbvhV9XkAWd/hK2o7HCJqFJ7hRxQUw08UFMNPFBTDTxQUw08U\nFMNPFJSo08etpQvPH6E/fWp6Zr3HWbrbWl47zy2TX37H3t576ba/MusfXDXarBee32rXR47MrJWP\n2WMrnjvLrO/6tD1l47JFW8z6jsMTM2tvHRxvHnv9h+3zG7464U2zbvHOAfCeiy3OpN68lvae/4ld\naH/pmH3yRQVf+YmCYviJgmL4iYJi+ImCYviJgmL4iYJi+ImCamifv+38kfqzja11uW1rvv1AeMtI\npyxBnTq2S3/+RbP+gXtOy6y1PGv34eF8/2WYPadeT9hz8mVE9nLsevy4eeyuv7vYrP/z9d8y65eM\nyO7lD4UttvvDPj8RuRh+oqAYfqKgGH6ioBh+oqAYfqKgGH6ioAaybv+gkLrdcz1v3zvW22p60wWP\n2F/ge9mlr3X9sXnoY49eZtbP+vffmvVCx6/NOox+upxhrxUw5bJOs/7x7GUMAACHStlrGYwv2mso\neLzvmbenQDPgKz9RUAw/UVAMP1FQDD9RUAw/UVAMP1FQDD9RUO58fhFpBbAOwBkAygBWq+r9IrIS\nwA0A9lWuukJVn7Ruq57z+Qez1H3kU+amHynb6/p7+yGknP9wqNRt1r1evLdOwgnNXnt/bME+ScC7\n7XqfV1KtU5nPP5CTfHoA3K6qW0TkNACbReTpSu1eVf1GtQMlovy44VfVPQD2VD4+LCLbAUyr98CI\nqL5O6f2iiMwA8FEAL1YuullEXhaRNSLS795LIrJMRNpFpH3fAXsLJCJqnAGHX0TGAngUwK2q+nsA\n3wZwNoB56H1ncHd/x6nqalVtU9W2yRPz20+PiN5tQOEXkWHoDf73VfUxAFDVvapaUtUygAcAzK/f\nMImo1tzwi4gAeBDAdlW9p8/lU/tc7TMAttV+eERULwP5a/8lAL4E4BUROblX9AoAi0VkHgAF0AHg\nxrqMcAjoLtvLW48u2Mtje1JahV7Ly2O10zyp02qtLdsBYGyh+nacd9v7S0fN+qTimKq/dqMM5K/9\nzwPor29o9vSJqLnxDD+ioBh+oqAYfqKgGH6ioBh+oqAYfqKghszS3c0stY9fT6nTiQv9doH/nzXd\n2Dv/weM9rtbtH9ce81jvHITxg2Bpbg9f+YmCYviJgmL4iYJi+ImCYviJgmL4iYJi+ImCcpfurukX\nE9kHYGefiyYB2N+wAZyaZh1bs44L4NiqVcuxnaWqkwdyxYaG/31fXKRdVdtyG4ChWcfWrOMCOLZq\n5TU2vu0nCorhJwoq7/CvzvnrW5p1bM06LoBjq1YuY8v1d34iyk/er/xElJNcwi8iC0TkNRF5Q0Tu\nzGMMWUSkQ0ReEZGtItKe81jWiEiXiGzrc9kEEXlaRF6v/N/vNmk5jW2liPy68thtFZFP5jS2VhF5\nVkS2i8gvROSWyuW5PnbGuHJ53Br+tl9EigB+BeBKALsBbAKwWFV/2dCBZBCRDgBtqpp7T1hEPg7g\nCIB1qnpe5bJ/AnBQVVdVfnCOV9U7mmRsKwEcyXvn5sqGMlP77iwN4BoA1yHHx84Y1yLk8Ljl8co/\nH8AbqrpDVd8B8DCAhTmMo+mp6nMADr7n4oUA1lY+XoveJ0/DZYytKajqHlXdUvn4MICTO0vn+tgZ\n48pFHuGfBmBXn893o7m2/FYAPxKRzSKyLO/B9OP0yrbpJ7dPn5LzeN7L3bm5kd6zs3TTPHbV7Hhd\na3mEv791n5qp5XCJql4A4GoAN1Xe3tLADGjn5kbpZ2fpplDtjte1lkf4dwNo7fP5dACdOYyjX6ra\nWfm/C8DjaL7dh/ee3CS18n9XzuP5g2baubm/naXRBI9dM+14nUf4NwGYLSIzRWQ4gGsBbMhhHO8j\nImMqf4iBiIwBcBWab/fhDQCWVD5eAuCJHMfyLs2yc3PWztLI+bFrth2vcznJp9LKuA9AEcAaVf16\nwwfRDxH5EHpf7YHelY1/kOfYRGQ9gMvRO+trL4C7APwbgEcAnAngLQCfV9WG/+EtY2yXo/et6x92\nbj75O3aDx3YpgP8G8AqAk8sTr0Dv79e5PXbGuBYjh8eNZ/gRBcUz/IiCYviJgmL4iYJi+ImCYviJ\ngmL4iYJi+ImCYviJgvo/bOXMnwSdRKoAAAAASUVORK5CYII=\n",
-      "text/plain": [
-       "<matplotlib.figure.Figure at 0x7f24868a9080>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
     }
    ],
    "source": [
-    "import scipy\n",
-    "from PIL import Image\n",
-    "from scipy import ndimage\n",
-    "\n",
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline\n",
-    "\n",
-    "test_image = \"mnist_image_2.jpg\"\n",
-    "\n",
-    "# Preprocess image to fit the algorithm.\n",
-    "fname = \"images/\" + test_image\n",
-    "image = np.array(ndimage.imread(fname, flatten = False))\n",
-    "\n",
-    "test_image = scipy.misc.imresize(image, size = (28, 28)).reshape((1, 28, 28, 1))\n",
-    "image_prediction = model.predict_classes(test_image)\n",
-    "\n",
-    "plt.imshow(image)\n",
-    "print(\"The algorithm predicts: y = \" + str(np.squeeze(image_prediction)))"
+    "predictions = model.predict_classes(X_test, verbose = 2)\n",
+    "print(predictions)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test Final Accuracy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10000/10000 [==============================] - 20s    \n",
+      "Final loss: 0.0541, final accuracy: 0.9837\n"
+     ]
+    }
+   ],
+   "source": [
+    "final_loss, final_acc = model.evaluate(X_test, y_test, verbose = 1)\n",
+    "print(\"Final loss: {0:.4f}, final accuracy: {1:.4f}\".format(final_loss, final_acc))"
+   ]
   }
  ],
  "metadata": {
