--- a/notebooks/ekholabs-kaggle-mnist-challenge.ipynb
+++ b/notebooks/ekholabs-kaggle-mnist-challenge.ipynb
@@ -53,6 +53,8 @@
     "from keras import regularizers\n",
     "from keras.callbacks import TensorBoard\n",
     "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
     "import pandas as pd\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
@@ -72,47 +74,20 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "(X_train, y_train), (X_test, y_test) = mnist.load_data()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Preprocess data\n",
-    "Flatten and normalise input data."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train = X_train.reshape(60000, 28 * 28 * 1).astype('float32')\n",
-    "X_test = X_test.reshape(10000, 28 * 28 * 1).astype('float32')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_train /= 255\n",
-    "X_test /= 255"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# One-hot encoded categories\n",
     "n_classes = 10\n",
+    "\n",
+    "raw_data = np.loadtxt('kaggle/datasets/train.csv', skiprows=1, dtype='int', delimiter=',')\n",
+    "X_train, X_val, y_train, y_val = train_test_split(\n",
+    "    raw_data[:,1:], raw_data[:,0], test_size = 0.1)\n",
+    "\n",
+    "X_train = X_train.reshape(-1, 28 * 28 * 1)\n",
+    "X_val = X_val.reshape(-1, 28 * 28 * 1)\n",
+    "\n",
+    "X_train = X_train.astype(\"float32\")/255.\n",
+    "X_val = X_val.astype(\"float32\")/255.\n",
+    "\n",
     "y_train = keras.utils.to_categorical(y_train, n_classes)\n",
-    "y_test = keras.utils.to_categorical(y_test, n_classes)"
+    "y_val = keras.utils.to_categorical(y_val, n_classes)\n"
    ]
   },
   {
@@ -129,16 +104,16 @@
    "outputs": [],
    "source": [
     "model = Sequential()\n",
-    "# Dense = Fully Connected layer\n",
+    "\n",
     "model.add(Dense((64), activation = 'relu', input_shape = (28 * 28 * 1,)))\n",
     "model.add(BatchNormalization())\n",
     "model.add(Dropout(0.5))\n",
     "model.add(Dense((128), activation = 'relu'))\n",
     "model.add(BatchNormalization())\n",
+    "model.add(Dropout(0.5))\n",
+    "model.add(Dense((128), activation = 'relu'))\n",
+    "model.add(BatchNormalization())\n",
     "model.add(Dropout(0.25))\n",
-    "# model.add(Dense((256), activation = 'relu'))\n",
-    "# model.add(BatchNormalization())\n",
-    "# model.add(Dropout(0.25))\n",
     "model.add(Dense((10), activation = 'softmax'))"
    ]
   },
@@ -164,7 +139,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"logs/deepnet-mnist-relus-20-epochs\")"
+    "tensorboard = TensorBoard(\"logs/deepnet-mnist-relu-20-epochs\")"
    ]
   },
   {
@@ -196,7 +171,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.fit(X_train, y_train, batch_size = 128, epochs = 20, verbose = 2, validation_split = 0.1)"
+    "model.fit(X_train, y_train, batch_size = 128, epochs = 1, verbose = 1, validation_split = 0.1, callbacks = [tensorboard])"
    ]
   },
   {
@@ -212,7 +187,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictions = model.predict_classes(X_test, verbose = 2)\n",
+    "X_test = np.loadtxt('kaggle/datasets/test.csv', skiprows=1, dtype='int', delimiter=',')\n",
+    "X_test = X_test.reshape(-1, 28 * 28 * 1).astype('float32') / 255.\n",
+    "\n",
+    "predictions = model.predict(X_test, verbose = 2)\n",
+    "predictions = np.argmax(predictions, axis = 1)\n",
     "print(predictions)"
    ]
   },
@@ -229,9 +208,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "final_loss, final_acc = model.evaluate(X_test, y_test, verbose = 1)\n",
+    "final_loss, final_acc = model.evaluate(X_val, y_val, verbose = 1)\n",
     "print(\"Final loss: {0:.4f}, final accuracy: {1:.4f}\".format(final_loss, final_acc))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
