--- a/notebooks/ekholabs-kaggle-mnist-challenge-cnn-ReLU.ipynb
+++ b/notebooks/ekholabs-kaggle-mnist-challenge-cnn-ReLU.ipynb
@@ -58,7 +58,6 @@
     "from keras.layers import Dense, Dropout\n",
     "from keras.layers import Flatten, MaxPooling2D, Conv2D, Activation\n",
     "from keras.layers.normalization import BatchNormalization\n",
-    "from keras.optimizers import Adam\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.callbacks import TensorBoard, LearningRateScheduler\n",
     "\n",
@@ -114,19 +113,18 @@
    "source": [
     "model = Sequential()\n",
     "\n",
-    "model.add(Conv2D(32, 5, padding = 'same', activation ='relu', input_shape = (28,28,1)))\n",
-    "model.add(Conv2D(32, 5, padding = 'same', activation ='relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "model.add(Conv2D(16, 4, padding = 'same', activation ='relu', input_shape = (28, 28, 1)))\n",
+    "model.add(Conv2D(16, 4, padding = 'same', activation ='relu'))\n",
+    "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(64, 5, padding = 'same', activation ='relu', input_shape = (28,28,1)))\n",
-    "model.add(Conv2D(64, 5, padding = 'same', activation ='relu'))\n",
-    "model.add(MaxPooling2D(pool_size=(2,2)))\n",
+    "model.add(Conv2D(20, 7, padding = 'same', activation ='relu'))\n",
+    "model.add(Conv2D(20, 7, activation ='relu'))\n",
+    "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.25))\n",
-    "\n",
     "\n",
     "model.add(Flatten())\n",
-    "model.add(Dense(256, activation = \"relu\"))\n",
+    "model.add(Dense(1024, activation = \"relu\"))\n",
     "model.add(Dropout(0.5))\n",
     "model.add(Dense(10, activation = \"softmax\"))"
    ]
@@ -143,32 +141,32 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 28, 28, 32)        832       \n",
+      "conv2d_1 (Conv2D)            (None, 28, 28, 16)        272       \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 28, 28, 32)        25632     \n",
+      "conv2d_2 (Conv2D)            (None, 28, 28, 16)        4112      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 32)        0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 16)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 14, 14, 32)        0         \n",
+      "dropout_1 (Dropout)          (None, 14, 14, 16)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 14, 14, 64)        51264     \n",
+      "conv2d_3 (Conv2D)            (None, 14, 14, 20)        15700     \n",
       "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 14, 14, 64)        102464    \n",
+      "conv2d_4 (Conv2D)            (None, 8, 8, 20)          19620     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 7, 7, 64)          0         \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 4, 4, 20)          0         \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 7, 7, 64)          0         \n",
+      "dropout_2 (Dropout)          (None, 4, 4, 20)          0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 3136)              0         \n",
+      "flatten_1 (Flatten)          (None, 320)               0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 256)               803072    \n",
+      "dense_1 (Dense)              (None, 1024)              328704    \n",
       "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 256)               0         \n",
+      "dropout_3 (Dropout)          (None, 1024)              0         \n",
       "_________________________________________________________________\n",
-      "dense_2 (Dense)              (None, 10)                2570      \n",
+      "dense_2 (Dense)              (None, 10)                10250     \n",
       "=================================================================\n",
-      "Total params: 985,834\n",
-      "Trainable params: 985,834\n",
+      "Total params: 378,658\n",
+      "Trainable params: 378,658\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -194,8 +192,7 @@
     "datagen = ImageDataGenerator(zoom_range = 0.1,\n",
     "                            height_shift_range = 0.1,\n",
     "                            width_shift_range = 0.1,\n",
-    "                            rotation_range = 10)\n",
-    "datagen.fit(X_train)"
+    "                            rotation_range = 10)"
    ]
   },
   {
@@ -243,7 +240,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"logs/lenet-cnn-mnist-relu-30-epochs\")"
+    "tensorboard = TensorBoard(\"logs/lenet-cnn-mnist-relu-no-augmentation-50-epochs\")"
    ]
   },
   {
@@ -262,75 +259,82 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Train on 34020 samples, validate on 3780 samples\n",
       "Epoch 1/30\n",
-      "150/150 [==============================] - 124s - loss: 0.7990 - acc: 0.7303 - val_loss: 0.1399 - val_acc: 0.9600\n",
+      "34020/34020 [==============================] - 254s - loss: 0.2421 - acc: 0.9216 - val_loss: 0.0505 - val_acc: 0.9841\n",
       "Epoch 2/30\n",
-      "150/150 [==============================] - 123s - loss: 0.2593 - acc: 0.9220 - val_loss: 0.1246 - val_acc: 0.9625\n",
+      "34020/34020 [==============================] - 258s - loss: 0.0754 - acc: 0.9771 - val_loss: 0.0457 - val_acc: 0.9852\n",
       "Epoch 3/30\n",
-      "150/150 [==============================] - 146s - loss: 0.1810 - acc: 0.9452 - val_loss: 0.0752 - val_acc: 0.9775\n",
+      "34020/34020 [==============================] - 250s - loss: 0.0564 - acc: 0.9831 - val_loss: 0.0376 - val_acc: 0.9902\n",
       "Epoch 4/30\n",
-      "150/150 [==============================] - 232s - loss: 0.1408 - acc: 0.9558 - val_loss: 0.0669 - val_acc: 0.9775\n",
+      "34020/34020 [==============================] - 251s - loss: 0.0465 - acc: 0.9850 - val_loss: 0.0359 - val_acc: 0.9905\n",
       "Epoch 5/30\n",
-      "150/150 [==============================] - 228s - loss: 0.1297 - acc: 0.9619 - val_loss: 0.0756 - val_acc: 0.9800\n",
+      "34020/34020 [==============================] - 256s - loss: 0.0380 - acc: 0.9882 - val_loss: 0.0303 - val_acc: 0.9910\n",
       "Epoch 6/30\n",
-      "150/150 [==============================] - 247s - loss: 0.1028 - acc: 0.9690 - val_loss: 0.0441 - val_acc: 0.9825\n",
+      "34020/34020 [==============================] - 193s - loss: 0.0306 - acc: 0.9903 - val_loss: 0.0423 - val_acc: 0.9884\n",
       "Epoch 7/30\n",
-      "150/150 [==============================] - 217s - loss: 0.0971 - acc: 0.9700 - val_loss: 0.0405 - val_acc: 0.9800\n",
+      "34020/34020 [==============================] - 132s - loss: 0.0267 - acc: 0.9914 - val_loss: 0.0337 - val_acc: 0.9902\n",
       "Epoch 8/30\n",
-      "150/150 [==============================] - 210s - loss: 0.0886 - acc: 0.9739 - val_loss: 0.0360 - val_acc: 0.9875\n",
+      "34020/34020 [==============================] - 120s - loss: 0.0227 - acc: 0.9925 - val_loss: 0.0376 - val_acc: 0.9902\n",
       "Epoch 9/30\n",
-      "150/150 [==============================] - 249s - loss: 0.0716 - acc: 0.9780 - val_loss: 0.0416 - val_acc: 0.9875\n",
+      "34020/34020 [==============================] - 137s - loss: 0.0199 - acc: 0.9941 - val_loss: 0.0251 - val_acc: 0.9934\n",
       "Epoch 10/30\n",
-      "150/150 [==============================] - 239s - loss: 0.0825 - acc: 0.9757 - val_loss: 0.0381 - val_acc: 0.9875\n",
+      "34020/34020 [==============================] - 136s - loss: 0.0163 - acc: 0.9949 - val_loss: 0.0294 - val_acc: 0.9921\n",
       "Epoch 11/30\n",
-      "150/150 [==============================] - 228s - loss: 0.0674 - acc: 0.9798 - val_loss: 0.0467 - val_acc: 0.9850\n",
+      "34020/34020 [==============================] - 126s - loss: 0.0177 - acc: 0.9947 - val_loss: 0.0233 - val_acc: 0.9926\n",
       "Epoch 12/30\n",
-      "150/150 [==============================] - 116s - loss: 0.0708 - acc: 0.9793 - val_loss: 0.0375 - val_acc: 0.9900\n",
+      "34020/34020 [==============================] - 130s - loss: 0.0122 - acc: 0.9961 - val_loss: 0.0248 - val_acc: 0.9929\n",
       "Epoch 13/30\n",
-      "150/150 [==============================] - 117s - loss: 0.0619 - acc: 0.9807 - val_loss: 0.0414 - val_acc: 0.9900\n",
+      "34020/34020 [==============================] - 158s - loss: 0.0116 - acc: 0.9963 - val_loss: 0.0310 - val_acc: 0.9931\n",
       "Epoch 14/30\n",
-      "150/150 [==============================] - 115s - loss: 0.0644 - acc: 0.9804 - val_loss: 0.0378 - val_acc: 0.9900\n",
+      "34020/34020 [==============================] - 205s - loss: 0.0100 - acc: 0.9970 - val_loss: 0.0247 - val_acc: 0.9937\n",
       "Epoch 15/30\n",
-      "150/150 [==============================] - 117s - loss: 0.0550 - acc: 0.9835 - val_loss: 0.0294 - val_acc: 0.9900\n",
+      "34020/34020 [==============================] - 156s - loss: 0.0111 - acc: 0.9968 - val_loss: 0.0244 - val_acc: 0.9939\n",
       "Epoch 16/30\n",
-      "150/150 [==============================] - 115s - loss: 0.0642 - acc: 0.9821 - val_loss: 0.0295 - val_acc: 0.9875\n",
+      "34020/34020 [==============================] - 139s - loss: 0.0091 - acc: 0.9969 - val_loss: 0.0275 - val_acc: 0.9931\n",
       "Epoch 17/30\n",
-      "150/150 [==============================] - 118s - loss: 0.0480 - acc: 0.9851 - val_loss: 0.0288 - val_acc: 0.9875\n",
+      "34020/34020 [==============================] - 136s - loss: 0.0072 - acc: 0.9977 - val_loss: 0.0294 - val_acc: 0.9931\n",
       "Epoch 18/30\n",
-      "150/150 [==============================] - 117s - loss: 0.0551 - acc: 0.9842 - val_loss: 0.0321 - val_acc: 0.9850\n",
+      "34020/34020 [==============================] - 139s - loss: 0.0068 - acc: 0.9977 - val_loss: 0.0263 - val_acc: 0.9944\n",
       "Epoch 19/30\n",
-      "150/150 [==============================] - 115s - loss: 0.0512 - acc: 0.9846 - val_loss: 0.0261 - val_acc: 0.9950\n",
+      "34020/34020 [==============================] - 139s - loss: 0.0070 - acc: 0.9975 - val_loss: 0.0258 - val_acc: 0.9947\n",
       "Epoch 20/30\n",
-      "150/150 [==============================] - 116s - loss: 0.0429 - acc: 0.9866 - val_loss: 0.0275 - val_acc: 0.9925\n",
+      "34020/34020 [==============================] - 136s - loss: 0.0064 - acc: 0.9977 - val_loss: 0.0264 - val_acc: 0.9947\n",
       "Epoch 21/30\n",
-      "150/150 [==============================] - 119s - loss: 0.0471 - acc: 0.9859 - val_loss: 0.0250 - val_acc: 0.9850\n",
+      "34020/34020 [==============================] - 138s - loss: 0.0056 - acc: 0.9980 - val_loss: 0.0247 - val_acc: 0.9942\n",
       "Epoch 22/30\n",
-      "150/150 [==============================] - 117s - loss: 0.0470 - acc: 0.9875 - val_loss: 0.0263 - val_acc: 0.9900\n",
+      "34020/34020 [==============================] - 139s - loss: 0.0039 - acc: 0.9987 - val_loss: 0.0251 - val_acc: 0.9947\n",
       "Epoch 23/30\n",
-      "150/150 [==============================] - 116s - loss: 0.0473 - acc: 0.9873 - val_loss: 0.0289 - val_acc: 0.9875\n",
+      "34020/34020 [==============================] - 136s - loss: 0.0044 - acc: 0.9986 - val_loss: 0.0268 - val_acc: 0.9942\n",
       "Epoch 24/30\n",
-      "150/150 [==============================] - 118s - loss: 0.0397 - acc: 0.9883 - val_loss: 0.0283 - val_acc: 0.9900\n",
+      "34020/34020 [==============================] - 145s - loss: 0.0047 - acc: 0.9983 - val_loss: 0.0242 - val_acc: 0.9944\n",
       "Epoch 25/30\n",
-      "150/150 [==============================] - 119s - loss: 0.0495 - acc: 0.9846 - val_loss: 0.0284 - val_acc: 0.9900\n",
+      "34020/34020 [==============================] - 144s - loss: 0.0040 - acc: 0.9986 - val_loss: 0.0254 - val_acc: 0.9939\n",
       "Epoch 26/30\n",
-      "150/150 [==============================] - 116s - loss: 0.0408 - acc: 0.9856 - val_loss: 0.0322 - val_acc: 0.9900\n",
+      "34020/34020 [==============================] - 136s - loss: 0.0030 - acc: 0.9989 - val_loss: 0.0252 - val_acc: 0.9947\n",
       "Epoch 27/30\n",
-      "150/150 [==============================] - 141s - loss: 0.0425 - acc: 0.9869 - val_loss: 0.0332 - val_acc: 0.9875\n",
+      "34020/34020 [==============================] - 138s - loss: 0.0027 - acc: 0.9991 - val_loss: 0.0267 - val_acc: 0.9942\n",
       "Epoch 28/30\n",
-      "150/150 [==============================] - 242s - loss: 0.0425 - acc: 0.9873 - val_loss: 0.0285 - val_acc: 0.9925\n",
+      "34020/34020 [==============================] - 138s - loss: 0.0037 - acc: 0.9989 - val_loss: 0.0263 - val_acc: 0.9942\n",
       "Epoch 29/30\n",
-      "150/150 [==============================] - 237s - loss: 0.0399 - acc: 0.9868 - val_loss: 0.0271 - val_acc: 0.9900\n",
+      "34020/34020 [==============================] - 139s - loss: 0.0037 - acc: 0.9987 - val_loss: 0.0253 - val_acc: 0.9939\n",
       "Epoch 30/30\n",
-      "150/150 [==============================] - 231s - loss: 0.0405 - acc: 0.9875 - val_loss: 0.0293 - val_acc: 0.9875\n"
+      "34020/34020 [==============================] - 142s - loss: 0.0029 - acc: 0.9991 - val_loss: 0.0267 - val_acc: 0.9942\n"
      ]
     }
    ],
    "source": [
-    "hist = model.fit_generator(datagen.flow(X_train, y_train, batch_size = 64),\n",
-    "                           steps_per_epoch = 150,\n",
-    "                           epochs = 30,\n",
+    "# hist = model.fit_generator(datagen.flow(X_train, y_train, batch_size = 32),\n",
+    "#                            steps_per_epoch = 300,\n",
+    "#                            epochs = 65,\n",
+    "#                            verbose = 1,\n",
+    "#                            validation_data = (X_val[:400,:], y_val[:400,:]),\n",
+    "#                            callbacks=[annealer, tensorboard])\n",
+    "\n",
+    "hist = model.fit(X_train, y_train, batch_size = 32,\n",
+    "                           epochs = 50,\n",
     "                           verbose = 1,\n",
-    "                           validation_data = (X_val[:400,:], y_val[:400,:]),\n",
+    "                           validation_split = 0.1,\n",
     "                           callbacks=[annealer, tensorboard])"
    ]
   },
@@ -350,8 +354,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4200/4200 [==============================] - 33s    \n",
-      "Final loss: 0.0189, final accuracy: 0.9945\n"
+      "4192/4200 [============================>.] - ETA: 0sFinal loss: 0.0281, final accuracy: 0.9931\n"
      ]
     }
    ],
@@ -379,7 +382,7 @@
     "predictions = model.predict(X_test, verbose = 2)\n",
     "predictions = np.argmax(predictions, axis = 1)\n",
     "\n",
-    "pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-relu-30-epochs.csv', index = False, header = True)"
+    "pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-relu-no-augmentation-50-epochs.csv', index = False, header = True)"
    ]
   },
   {
