--- a/notebooks/ekholabs-kaggle-mnist-challenge-cnn-ReLUs.ipynb
+++ b/notebooks/ekholabs-kaggle-mnist-challenge-cnn-ReLUs.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Deep Convolutional Neural Network in Keras"
+    "# Deep Convolutional Neural Network in Keras with ReLUs"
    ]
   },
   {
@@ -58,7 +58,6 @@
     "from keras.layers import Dense, Dropout\n",
     "from keras.layers import Flatten, MaxPooling2D, Conv2D, Activation\n",
     "from keras.layers.normalization import BatchNormalization\n",
-    "from keras.optimizers import Adam\n",
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.callbacks import TensorBoard, LearningRateScheduler\n",
     "\n",
@@ -140,24 +139,25 @@
    "source": [
     "model = Sequential()\n",
     "\n",
-    "model.add(Conv2D(16, 4, padding = 'same', activation ='ReLU_s', input_shape = (28, 28, 1)))\n",
-    "model.add(Conv2D(16, 4, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(Conv2D(20, 4, padding = 'same', activation ='ReLU_s', input_shape = (28, 28, 1)))\n",
+    "model.add(Conv2D(20, 4, padding = 'same', activation ='ReLU_s'))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(20, 7, padding = 'same', activation ='ReLU_s'))\n",
-    "model.add(Conv2D(20, 7, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(Conv2D(28, 7, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(Conv2D(28, 7, padding = 'same', activation ='ReLU_s'))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
-    "model.add(Conv2D(28, 2, padding = 'same', activation ='ReLU_s'))\n",
-    "model.add(Conv2D(28, 2, activation ='ReLU_s'))\n",
+    "model.add(Conv2D(32, 2, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(Conv2D(32, 2, padding = 'same', activation ='ReLU_s'))\n",
+    "model.add(Conv2D(38, 2, activation ='ReLU_s'))\n",
     "model.add(MaxPooling2D(pool_size = (2, 2)))\n",
     "model.add(Dropout(0.25))\n",
     "\n",
     "model.add(Flatten())\n",
     "model.add(Dense(1024, activation = \"ReLU_s\"))\n",
-    "model.add(Dropout(0.5))\n",
+    "model.add(Dropout(0.25))\n",
     "model.add(Dense(10, activation = \"softmax\"))"
    ]
   },
@@ -173,40 +173,42 @@
       "_________________________________________________________________\n",
       "Layer (type)                 Output Shape              Param #   \n",
       "=================================================================\n",
-      "conv2d_1 (Conv2D)            (None, 28, 28, 16)        272       \n",
+      "conv2d_1 (Conv2D)            (None, 28, 28, 20)        340       \n",
       "_________________________________________________________________\n",
-      "conv2d_2 (Conv2D)            (None, 28, 28, 16)        4112      \n",
+      "conv2d_2 (Conv2D)            (None, 28, 28, 20)        6420      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 16)        0         \n",
+      "max_pooling2d_1 (MaxPooling2 (None, 14, 14, 20)        0         \n",
       "_________________________________________________________________\n",
-      "dropout_1 (Dropout)          (None, 14, 14, 16)        0         \n",
+      "dropout_1 (Dropout)          (None, 14, 14, 20)        0         \n",
       "_________________________________________________________________\n",
-      "conv2d_3 (Conv2D)            (None, 14, 14, 20)        15700     \n",
+      "conv2d_3 (Conv2D)            (None, 14, 14, 28)        27468     \n",
       "_________________________________________________________________\n",
-      "conv2d_4 (Conv2D)            (None, 14, 14, 20)        19620     \n",
+      "conv2d_4 (Conv2D)            (None, 14, 14, 28)        38444     \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_2 (MaxPooling2 (None, 7, 7, 20)          0         \n",
+      "max_pooling2d_2 (MaxPooling2 (None, 7, 7, 28)          0         \n",
       "_________________________________________________________________\n",
-      "dropout_2 (Dropout)          (None, 7, 7, 20)          0         \n",
+      "dropout_2 (Dropout)          (None, 7, 7, 28)          0         \n",
       "_________________________________________________________________\n",
-      "conv2d_5 (Conv2D)            (None, 7, 7, 28)          2268      \n",
+      "conv2d_5 (Conv2D)            (None, 7, 7, 32)          3616      \n",
       "_________________________________________________________________\n",
-      "conv2d_6 (Conv2D)            (None, 6, 6, 28)          3164      \n",
+      "conv2d_6 (Conv2D)            (None, 7, 7, 32)          4128      \n",
       "_________________________________________________________________\n",
-      "max_pooling2d_3 (MaxPooling2 (None, 3, 3, 28)          0         \n",
+      "conv2d_7 (Conv2D)            (None, 6, 6, 38)          4902      \n",
       "_________________________________________________________________\n",
-      "dropout_3 (Dropout)          (None, 3, 3, 28)          0         \n",
+      "max_pooling2d_3 (MaxPooling2 (None, 3, 3, 38)          0         \n",
       "_________________________________________________________________\n",
-      "flatten_1 (Flatten)          (None, 252)               0         \n",
+      "dropout_3 (Dropout)          (None, 3, 3, 38)          0         \n",
       "_________________________________________________________________\n",
-      "dense_1 (Dense)              (None, 1024)              259072    \n",
+      "flatten_1 (Flatten)          (None, 342)               0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 1024)              351232    \n",
       "_________________________________________________________________\n",
       "dropout_4 (Dropout)          (None, 1024)              0         \n",
       "_________________________________________________________________\n",
       "dense_2 (Dense)              (None, 10)                10250     \n",
       "=================================================================\n",
-      "Total params: 314,458\n",
-      "Trainable params: 314,458\n",
+      "Total params: 446,800\n",
+      "Trainable params: 446,800\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -229,10 +231,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "datagen = ImageDataGenerator(zoom_range = 0.1,\n",
+    "train_datagen = ImageDataGenerator(zoom_range = 0.1,\n",
     "                            height_shift_range = 0.1,\n",
     "                            width_shift_range = 0.1,\n",
-    "                            rotation_range = 10)"
+    "                            rotation_range = 10)\n",
+    "\n",
+    "test_datagen = ImageDataGenerator(zoom_range = 0.1,\n",
+    "                            height_shift_range = 0.1,\n",
+    "                            width_shift_range = 0.1,\n",
+    "                            rotation_range = 10)\n",
+    "\n",
+    "train_generator = train_datagen.flow(X_train, y_train, batch_size = 32)\n",
+    "\n",
+    "validation_generator = test_datagen.flow(X_val, y_val, batch_size = 32)"
    ]
   },
   {
@@ -280,7 +291,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "tensorboard = TensorBoard(\"logs/lenet-cnn-mnist-ReLUs-no-augmentation-30-epochs-new-layer\")"
+    "tensorboard = TensorBoard(\"logs/lenet-cnn-mnist-ReLUs-30-epochs-EkhoNet8-data-augmentation\")"
    ]
   },
   {
@@ -299,83 +310,83 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Train on 34020 samples, validate on 3780 samples\n",
       "Epoch 1/30\n",
-      "34020/34020 [==============================] - 150s - loss: 0.2878 - acc: 0.9044 - val_loss: 0.0682 - val_acc: 0.9791\n",
+      "2000/2000 [==============================] - 308s - loss: 0.2435 - acc: 0.9204 - val_loss: 0.0654 - val_acc: 0.9786\n",
       "Epoch 2/30\n",
-      "34020/34020 [==============================] - 145s - loss: 0.0828 - acc: 0.9756 - val_loss: 0.0499 - val_acc: 0.9862\n",
+      "2000/2000 [==============================] - 300s - loss: 0.0851 - acc: 0.9743 - val_loss: 0.0639 - val_acc: 0.9811\n",
       "Epoch 3/30\n",
-      "34020/34020 [==============================] - 147s - loss: 0.0588 - acc: 0.9824 - val_loss: 0.0332 - val_acc: 0.9910\n",
+      "2000/2000 [==============================] - 301s - loss: 0.0723 - acc: 0.9784 - val_loss: 0.0566 - val_acc: 0.9830\n",
       "Epoch 4/30\n",
-      "34020/34020 [==============================] - 145s - loss: 0.0487 - acc: 0.9855 - val_loss: 0.0332 - val_acc: 0.9905\n",
+      "2000/2000 [==============================] - 294s - loss: 0.0598 - acc: 0.9827 - val_loss: 0.0491 - val_acc: 0.9850\n",
       "Epoch 5/30\n",
-      "34020/34020 [==============================] - 151s - loss: 0.0409 - acc: 0.9883 - val_loss: 0.0284 - val_acc: 0.9910\n",
+      "2000/2000 [==============================] - 314s - loss: 0.0534 - acc: 0.9840 - val_loss: 0.0418 - val_acc: 0.9859\n",
       "Epoch 6/30\n",
-      "34020/34020 [==============================] - 149s - loss: 0.0370 - acc: 0.9894 - val_loss: 0.0270 - val_acc: 0.9929\n",
+      "2000/2000 [==============================] - 301s - loss: 0.0472 - acc: 0.9852 - val_loss: 0.0460 - val_acc: 0.9864\n",
       "Epoch 7/30\n",
-      "34020/34020 [==============================] - 152s - loss: 0.0299 - acc: 0.9907 - val_loss: 0.0328 - val_acc: 0.9915\n",
+      "2000/2000 [==============================] - 302s - loss: 0.0414 - acc: 0.9878 - val_loss: 0.0342 - val_acc: 0.9905\n",
       "Epoch 8/30\n",
-      "34020/34020 [==============================] - 155s - loss: 0.0261 - acc: 0.9919 - val_loss: 0.0264 - val_acc: 0.9918\n",
+      "2000/2000 [==============================] - 295s - loss: 0.0395 - acc: 0.9880 - val_loss: 0.0322 - val_acc: 0.9899\n",
       "Epoch 9/30\n",
-      "34020/34020 [==============================] - 149s - loss: 0.0214 - acc: 0.9940 - val_loss: 0.0273 - val_acc: 0.9915\n",
+      "2000/2000 [==============================] - 293s - loss: 0.0343 - acc: 0.9895 - val_loss: 0.0341 - val_acc: 0.9901\n",
       "Epoch 10/30\n",
-      "34020/34020 [==============================] - 166s - loss: 0.0212 - acc: 0.9936 - val_loss: 0.0279 - val_acc: 0.9907\n",
+      "2000/2000 [==============================] - 293s - loss: 0.0340 - acc: 0.9894 - val_loss: 0.0318 - val_acc: 0.9911\n",
       "Epoch 11/30\n",
-      "34020/34020 [==============================] - 151s - loss: 0.0178 - acc: 0.9947 - val_loss: 0.0216 - val_acc: 0.9934\n",
+      "2000/2000 [==============================] - 292s - loss: 0.0286 - acc: 0.9913 - val_loss: 0.0333 - val_acc: 0.9904\n",
       "Epoch 12/30\n",
-      "34020/34020 [==============================] - 152s - loss: 0.0154 - acc: 0.9952 - val_loss: 0.0264 - val_acc: 0.9929\n",
+      "2000/2000 [==============================] - 294s - loss: 0.0264 - acc: 0.9918 - val_loss: 0.0267 - val_acc: 0.9921\n",
       "Epoch 13/30\n",
-      "34020/34020 [==============================] - 148s - loss: 0.0157 - acc: 0.9954 - val_loss: 0.0197 - val_acc: 0.9931\n",
+      "2000/2000 [==============================] - 293s - loss: 0.0258 - acc: 0.9918 - val_loss: 0.0291 - val_acc: 0.9914\n",
       "Epoch 14/30\n",
-      "34020/34020 [==============================] - 144s - loss: 0.0134 - acc: 0.9957 - val_loss: 0.0209 - val_acc: 0.9947\n",
+      "2000/2000 [==============================] - 293s - loss: 0.0228 - acc: 0.9928 - val_loss: 0.0308 - val_acc: 0.9908\n",
       "Epoch 15/30\n",
-      "34020/34020 [==============================] - 149s - loss: 0.0112 - acc: 0.9968 - val_loss: 0.0254 - val_acc: 0.9931\n",
+      "2000/2000 [==============================] - 293s - loss: 0.0211 - acc: 0.9936 - val_loss: 0.0273 - val_acc: 0.9925\n",
       "Epoch 16/30\n",
-      "34020/34020 [==============================] - 145s - loss: 0.0103 - acc: 0.9965 - val_loss: 0.0221 - val_acc: 0.9939\n",
+      "2000/2000 [==============================] - 293s - loss: 0.0219 - acc: 0.9928 - val_loss: 0.0290 - val_acc: 0.9917\n",
       "Epoch 17/30\n",
-      "34020/34020 [==============================] - 152s - loss: 0.0087 - acc: 0.9974 - val_loss: 0.0228 - val_acc: 0.9934\n",
+      "2000/2000 [==============================] - 293s - loss: 0.0195 - acc: 0.9940 - val_loss: 0.0299 - val_acc: 0.9918\n",
       "Epoch 18/30\n",
-      "34020/34020 [==============================] - 152s - loss: 0.0089 - acc: 0.9968 - val_loss: 0.0211 - val_acc: 0.9939\n",
+      "2000/2000 [==============================] - 293s - loss: 0.0181 - acc: 0.9940 - val_loss: 0.0281 - val_acc: 0.9925\n",
       "Epoch 19/30\n",
-      "34020/34020 [==============================] - 151s - loss: 0.0074 - acc: 0.9978 - val_loss: 0.0225 - val_acc: 0.9926\n",
+      "2000/2000 [==============================] - 293s - loss: 0.0179 - acc: 0.9944 - val_loss: 0.0263 - val_acc: 0.9922\n",
       "Epoch 20/30\n",
-      "34020/34020 [==============================] - 144s - loss: 0.0070 - acc: 0.9980 - val_loss: 0.0187 - val_acc: 0.9944\n",
+      "2000/2000 [==============================] - 293s - loss: 0.0167 - acc: 0.9950 - val_loss: 0.0209 - val_acc: 0.9940\n",
       "Epoch 21/30\n",
-      "34020/34020 [==============================] - 146s - loss: 0.0068 - acc: 0.9981 - val_loss: 0.0196 - val_acc: 0.9947\n",
+      "2000/2000 [==============================] - 293s - loss: 0.0152 - acc: 0.9952 - val_loss: 0.0279 - val_acc: 0.9928\n",
       "Epoch 22/30\n",
-      "34020/34020 [==============================] - 147s - loss: 0.0055 - acc: 0.9982 - val_loss: 0.0190 - val_acc: 0.9947\n",
+      "2000/2000 [==============================] - 312s - loss: 0.0155 - acc: 0.9951 - val_loss: 0.0230 - val_acc: 0.9930\n",
       "Epoch 23/30\n",
-      "34020/34020 [==============================] - 149s - loss: 0.0059 - acc: 0.9982 - val_loss: 0.0203 - val_acc: 0.9942\n",
+      "2000/2000 [==============================] - 310s - loss: 0.0155 - acc: 0.9950 - val_loss: 0.0243 - val_acc: 0.9925\n",
       "Epoch 24/30\n",
-      "34020/34020 [==============================] - 155s - loss: 0.0052 - acc: 0.9984 - val_loss: 0.0191 - val_acc: 0.9952\n",
+      "2000/2000 [==============================] - 305s - loss: 0.0149 - acc: 0.9954 - val_loss: 0.0282 - val_acc: 0.9935\n",
       "Epoch 25/30\n",
-      "34020/34020 [==============================] - 155s - loss: 0.0047 - acc: 0.9984 - val_loss: 0.0171 - val_acc: 0.9952\n",
+      "2000/2000 [==============================] - 295s - loss: 0.0140 - acc: 0.9957 - val_loss: 0.0274 - val_acc: 0.9923\n",
       "Epoch 26/30\n",
-      "34020/34020 [==============================] - 148s - loss: 0.0037 - acc: 0.9986 - val_loss: 0.0197 - val_acc: 0.9955\n",
+      "2000/2000 [==============================] - 302s - loss: 0.0140 - acc: 0.9955 - val_loss: 0.0215 - val_acc: 0.9938\n",
       "Epoch 27/30\n",
-      "34020/34020 [==============================] - 142s - loss: 0.0038 - acc: 0.9989 - val_loss: 0.0209 - val_acc: 0.9944\n",
+      "2000/2000 [==============================] - 306s - loss: 0.0129 - acc: 0.9962 - val_loss: 0.0272 - val_acc: 0.9927\n",
       "Epoch 28/30\n",
-      "34020/34020 [==============================] - 149s - loss: 0.0038 - acc: 0.9988 - val_loss: 0.0196 - val_acc: 0.9950\n",
+      "2000/2000 [==============================] - 303s - loss: 0.0128 - acc: 0.9960 - val_loss: 0.0259 - val_acc: 0.9926\n",
       "Epoch 29/30\n",
-      "34020/34020 [==============================] - 165s - loss: 0.0033 - acc: 0.9989 - val_loss: 0.0200 - val_acc: 0.9947\n",
+      "2000/2000 [==============================] - 315s - loss: 0.0119 - acc: 0.9962 - val_loss: 0.0206 - val_acc: 0.9944\n",
       "Epoch 30/30\n",
-      "34020/34020 [==============================] - 154s - loss: 0.0037 - acc: 0.9989 - val_loss: 0.0202 - val_acc: 0.9942\n"
+      "2000/2000 [==============================] - 321s - loss: 0.0125 - acc: 0.9960 - val_loss: 0.0262 - val_acc: 0.9930\n"
      ]
     }
    ],
    "source": [
-    "# hist = model.fit_generator(datagen.flow(X_train, y_train, batch_size = 64),\n",
-    "#                            steps_per_epoch = 300,\n",
-    "#                            epochs = 65,\n",
-    "#                            verbose = 1,\n",
-    "#                            validation_data = (X_val[:400,:], y_val[:400,:]),\n",
-    "#                            callbacks = [tensorboard])\n",
-    "\n",
-    "hist = model.fit(X_train, y_train, batch_size = 32,\n",
+    "hist = model.fit_generator(train_generator,\n",
+    "                           steps_per_epoch = 2000,\n",
     "                           epochs = 30,\n",
     "                           verbose = 1,\n",
-    "                           validation_split = 0.1,\n",
-    "                           callbacks=[annealer, tensorboard])"
+    "                           validation_data = validation_generator,\n",
+    "                           validation_steps = 500,\n",
+    "                           callbacks = [annealer, tensorboard])\n",
+    "\n",
+    "# hist = model.fit(X_train, y_train, batch_size = 32,\n",
+    "#                            epochs = 40,\n",
+    "#                            verbose = 1,\n",
+    "#                            validation_split = 0.1,\n",
+    "#                            callbacks=[annealer, tensorboard])"
    ]
   },
   {
@@ -394,7 +405,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4192/4200 [============================>.] - ETA: 0sFinal loss: 0.0283, final accuracy: 0.9931\n"
+      "4192/4200 [============================>.] - ETA: 0sFinal loss: 0.0160, final accuracy: 0.9960\n"
      ]
     }
    ],
@@ -422,7 +433,7 @@
     "predictions = model.predict(X_test, verbose = 2)\n",
     "predictions = np.argmax(predictions, axis = 1)\n",
     "\n",
-    "pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-ReLUs-no-augmentation-30-epochs-new-layer.csv', index = False, header = True)"
+    "pd.DataFrame({\"ImageId\": list(range(1, len(predictions) + 1)), \"Label\": predictions}).to_csv('kaggle/results/cnn/submission-ReLUs-30-epochs-EkhoNet8-data-augmentation.csv', index = False, header = True)"
    ]
   },
   {
